# radjax

./: .gitignore  .readthedocs.yaml  README.md  benchmark.py  consts.py  grid.py  inference.py  line_rte.py  network.py  parametric_disk.py  parametric_disk_old.py  pyproject.toml  requirements.txt  sensor.py  setup.py  visibilities_utils.py  visualization.py
data/HD163296/Flaherty/: HD163296_CO_highres_cen.cm.params.yaml
docs/: requirements-docs.txt
docs/source/: conf.py  index.md  install.md  overview.md
docs/source/api/: index.rst  modules.rst  radjax.core.alma_io.rst  radjax.core.chemistry.rst  radjax.core.consts.rst  radjax.core.grid.rst  radjax.core.inference.rst  radjax.core.line_rte.rst  radjax.core.network.rst  radjax.core.parallel.rst  radjax.core.phys.rst  radjax.core.rst  radjax.core.sensor.rst  (+6 more)
inference/: inference_old.py
radjax/: __init__.py
radjax/core/: __init__.py  alma_io.py  chemistry.py  consts.py  disk.py  grid.py  inference.py  io.py  line_rte.py  network.py  parallel.py  phys.py  sensor.py  utils.py  visibilities.py  visualization.py
radjax/models/: __init__.py  broken_power_law.py
scripts/: mcmc_13co.py  mcmc_c18o.py  mcmc_co.py  mcmc_co_lowres.py
tests/: test_grid_rotations.py
tutorials/: 2. Render Parametric Model and Compare to Fits Datacube.ipynb  render_parametric_cube_old.ipynb  tutorial01-create-synthetic-disk.ipynb  tutorial02-render-synthetic-disk.ipynb  tutorial03-compare-model-to-fits.ipynb  tutorial03-compare_model_to_fits.ipynb  tutorial05-mcmc-inference-synthetic-data.ipynb  tutorial06-mcmc-inference-alma-data.ipynb
(+5 files in other folders)
